--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -8,7 +8,7 @@ license     = "Unlicense"
 name        = "rusty-node"
 publish     = false
 repository  = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
-version     = "4.0.0-dev"
+version     = "0.1.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
