--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -52,7 +52,7 @@ frame-system-benchmarking = { default-features = false, git = "https://github.co
 hex-literal               = { version = "0.3.4", optional = true }
 
 # Local Dependencies
-pallet-template = { default-features = false, path = "../pallets/template" }
+pallet-flipper = { default-features = false, path = "../pallets/flipper" }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
@@ -66,7 +66,7 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"hex-literal",
 	"pallet-balances/runtime-benchmarks",
-	"pallet-template/runtime-benchmarks",
+	"pallet-flipper/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
@@ -82,7 +82,7 @@ std = [
 	"pallet-grandpa/std",
 	"pallet-randomness-collective-flip/std",
 	"pallet-sudo/std",
-	"pallet-template/std",
+	"pallet-flipper/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
