--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,27 @@
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
+
+# top-most EditorConfig file
 root = true
 
 [*]
-indent_style=space
-indent_size=2
-tab_width=2
 end_of_line=lf
 charset=utf-8
+indent_style=space
+indent_size=4
+tab_width=4
 trim_trailing_whitespace=true
 insert_final_newline = true
+
+[*.md]
+# double whitespace at end of line denotes a line break in Markdown
+trim_trailing_whitespace = false
+
+[*.yml]
+indent_size = 2
 
 [*.{rs,toml}]
 indent_style=tab
 indent_size=tab
-tab_width=4
 max_line_length=100
