--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ['node', 'pallets/template', 'runtime']
+members = ['node', 'pallets/*', 'runtime']
 [profile.release]
 panic = 'unwind'
