--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,23 +1,25 @@
+# Configuration file for Rustfmt
+# https://rust-lang.github.io/rustfmt
+
+version = "Two"
+
 # Basic
 hard_tabs = true
 max_width = 100
-use_small_heuristics = "Max"
+
 # Imports
 imports_granularity = "Crate"
-reorder_imports = true
+
 # Consistency
 newline_style = "Unix"
+
 # Format comments
 comment_width = 100
 wrap_comments = true
+
 # Misc
-chain_width = 80
-spaces_around_ranges = false
-binop_separator = "Back"
-reorder_impl_items = false
-match_arm_leading_pipes = "Preserve"
-match_arm_blocks = false
+match_arm_blocks           = false
 match_block_trailing_comma = true
-trailing_comma = "Vertical"
-trailing_semicolon = false
-use_field_init_shorthand = true
+reorder_impl_items         = true
+trailing_semicolon         = false
+use_field_init_shorthand   = true
