--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,87 +14,87 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
-  "derive",
+	"derive",
 ] }
 scale-info = { version = "1.0", default-features = false, features = [
-  "derive",
+	"derive",
 ] }
 
-frame-executive                   = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-frame-support                     = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-frame-system                      = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-aura                       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-balances                   = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-grandpa                    = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-sudo                       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-timestamp                  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-transaction-payment        = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-api                            = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-block-builder                  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-consensus-aura                 = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-core                           = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-inherents                      = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-offchain                       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-runtime                        = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-session                        = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-std                            = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-transaction-pool               = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-version                        = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-aura                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-grandpa                    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-consensus-aura                 = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
 
 # Used for the node template's RPCs
-frame-system-rpc-runtime-api               = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
 
 # Used for runtime benchmarking
-frame-benchmarking        = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
-frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
+frame-benchmarking        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
+frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
 hex-literal               = { version = "0.3.4", optional = true }
 
 # Local Dependencies
-pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
+pallet-template = { default-features = false, path = "../pallets/template" }
 
 [build-dependencies]
-substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
 
 [features]
 default = ["std"]
 runtime-benchmarks = [
-  "frame-benchmarking/runtime-benchmarks",
-  "frame-support/runtime-benchmarks",
-  "frame-system-benchmarking",
-  "frame-system/runtime-benchmarks",
-  "hex-literal",
-  "pallet-balances/runtime-benchmarks",
-  "pallet-template/runtime-benchmarks",
-  "pallet-timestamp/runtime-benchmarks",
-  "sp-runtime/runtime-benchmarks",
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"frame-system-benchmarking",
+	"frame-system/runtime-benchmarks",
+	"hex-literal",
+	"pallet-balances/runtime-benchmarks",
+	"pallet-template/runtime-benchmarks",
+	"pallet-timestamp/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
 ]
 std = [
-  "codec/std",
-  "scale-info/std",
-  "frame-executive/std",
-  "frame-support/std",
-  "frame-system-rpc-runtime-api/std",
-  "frame-system/std",
-  "pallet-aura/std",
-  "pallet-balances/std",
-  "pallet-grandpa/std",
-  "pallet-randomness-collective-flip/std",
-  "pallet-sudo/std",
-  "pallet-template/std",
-  "pallet-timestamp/std",
-  "pallet-transaction-payment-rpc-runtime-api/std",
-  "pallet-transaction-payment/std",
-  "sp-api/std",
-  "sp-block-builder/std",
-  "sp-consensus-aura/std",
-  "sp-core/std",
-  "sp-inherents/std",
-  "sp-offchain/std",
-  "sp-runtime/std",
-  "sp-session/std",
-  "sp-std/std",
-  "sp-transaction-pool/std",
-  "sp-version/std",
+	"codec/std",
+	"scale-info/std",
+	"frame-executive/std",
+	"frame-support/std",
+	"frame-system-rpc-runtime-api/std",
+	"frame-system/std",
+	"pallet-aura/std",
+	"pallet-balances/std",
+	"pallet-grandpa/std",
+	"pallet-randomness-collective-flip/std",
+	"pallet-sudo/std",
+	"pallet-template/std",
+	"pallet-timestamp/std",
+	"pallet-transaction-payment-rpc-runtime-api/std",
+	"pallet-transaction-payment/std",
+	"sp-api/std",
+	"sp-block-builder/std",
+	"sp-consensus-aura/std",
+	"sp-core/std",
+	"sp-inherents/std",
+	"sp-offchain/std",
+	"sp-runtime/std",
+	"sp-session/std",
+	"sp-std/std",
+	"sp-transaction-pool/std",
+	"sp-version/std",
 ]
