--- a/pallets/nfts/Cargo.toml
+++ b/pallets/nfts/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-authors     = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
+authors     = ["Timothée Delabrouille <https://github.com/tdelabro>"]
 description = "FRAME pallet template for defining custom runtime logic."
 edition     = "2021"
-homepage    = "https://substrate.io/"
-license     = "Unlicense"
-name        = "pallet-template"
+license     = "Apache-2.0"
+name        = "pallet-nft"
 publish     = false
 repository  = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
-version     = "4.0.0-dev"
+version     = "0.1.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -16,12 +15,15 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
 	"derive",
 ] }
-frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
-frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
-frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
 scale-info = { version = "1.0", default-features = false, features = [
 	"derive",
 ] }
+
+frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
+frame-support      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+frame-system       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-std             = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+
 
 [dev-dependencies]
 sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
@@ -36,6 +38,7 @@ std = [
 	"frame-support/std",
 	"frame-system/std",
 	"frame-benchmarking/std",
+	"sp-std/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
