--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,42 +20,42 @@ scale-info = { version = "1.0", default-features = false, features = [
 	"derive",
 ] }
 
-frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-aura                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-grandpa                    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-consensus-aura                 = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-aura                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-grandpa                    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-consensus-aura                 = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
 
 # Used for the node template's RPCs
-frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
-pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
+pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
 
 # Used for runtime benchmarking
-frame-benchmarking        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
-frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true }
+frame-benchmarking        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
+frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
 hex-literal               = { version = "0.3.4", optional = true }
 
 # Local Dependencies
 pallet-template = { default-features = false, path = "../pallets/template" }
 
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
+substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
 
 [features]
 default = ["std"]
