fix: pin syn package to a version that actualy let substrate compile

--- a/exercises/ex03-nft/nft/Cargo.toml
+++ b/exercises/ex03-nft/nft/Cargo.toml
@@ -23,6 +23,7 @@ frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "h
 frame-support      = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 frame-system       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 sp-std             = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+syn                = { version = "=1.0.96" }
 
 
 [dev-dependencies]
