--- a/exercises/ex00-writing-tests/flipper/Cargo.toml
+++ b/exercises/ex00-writing-tests/flipper/Cargo.toml
@@ -21,6 +21,7 @@ scale-info = { version = "2.0.1", default-features = false, features = [
 frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", optional = true }
 frame-support      = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 frame-system       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+syn                = { version = "=1.0.96" }
 
 [dev-dependencies]
 sp-core    = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
