--- a/exercises/ex00-writing-tests/flipper/Cargo.toml
+++ b/exercises/ex00-writing-tests/flipper/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-authors    = ["Simon Galasso"]
-edition    = "2021"
-license    = "Apache-2.0"
-name       = "pallet-flipper"
-publish    = false
-repository = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
-version    = "0.1.0"
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+authors = ["Simon Galasso"]
+edition = "2021"
+license = "Apache-2.0"
+name    = "pallet-flipper"
+version = "0.1.0"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
@@ -18,25 +13,14 @@ scale-info = { version = "2.0.1", default-features = false, features = [
 	"derive",
 ] }
 
-frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", optional = true }
-frame-support      = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-frame-system       = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-syn                = { version = "=1.0.96" }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 
 [dev-dependencies]
-sp-core    = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-sp-io      = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-core    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-io      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 
 [features]
 default = ["std"]
-std = [
-	"codec/std",
-	"scale-info/std",
-	"frame-support/std",
-	"frame-system/std",
-	"frame-benchmarking/std",
-]
-
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
-try-runtime        = ["frame-support/try-runtime"]
+std     = ["codec/std", "scale-info/std", "frame-support/std", "frame-system/std"]
