--- a/exercises/ex04-marketplace/loosely-coupled-marketplace/Cargo.toml
+++ b/exercises/ex04-marketplace/loosely-coupled-marketplace/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-authors     = ["Timothée Delabrouille <https://github.com/tdelabro>"]
-description = "FRAME pallet template for defining custom runtime logic."
-edition     = "2021"
-license     = "Apache-2.0"
-name        = "pallet-loose-marketplace"
-publish     = false
-repository  = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
-version     = "0.1.0"
+authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
+edition = "2021"
+license = "Apache-2.0"
+name    = "pallet-loose-marketplace"
+version = "0.1.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -19,17 +16,18 @@ scale-info = { version = "2.0.1", default-features = false, features = [
 	"derive",
 ] }
 
-frame-support           = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-frame-system            = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-pallet-marketplace-nfts = { path = "../marketplace-nfts", default-features = false }
-sp-std                  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-syn                     = { version = "=1.0.96" }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-std        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+
+# Local dependecies
+pallet-marketplace-nfts = { path = "../marketplace-nfts" }
 
 [dev-dependencies]
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
-sp-core         = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-sp-io           = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
-sp-runtime      = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-core         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-io           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-runtime      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 
 [features]
 default = ["std"]
