--- a/exercises/ex10-offchain-worker/pallet-price-oracle/Cargo.toml
+++ b/exercises/ex10-offchain-worker/pallet-price-oracle/Cargo.toml
@@ -10,26 +10,28 @@ version = "0.1.0"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
 	"derive",
 ] }
-frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 scale-info = { version = "2.0.1", default-features = false, features = [
 	"derive",
 ] }
-serde = { version = "1.0.160", default-features = false, features = [
+
+frame-support = "38.0.0"
+frame-system = "38.0.0"
+
+serde = { version = "1.0.214", default-features = false, features = [
 	"alloc",
 	"derive",
 ] }
-serde_json = { version = "1.0.96", default-features = false, features = [
+serde_json = { version = "1.0.132", default-features = false, features = [
 	"alloc",
 ] }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-arithmetic = "26.0.0"
+sp-std = "14.0.0"
 
 [dev-dependencies]
-sp-core     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
-sp-io       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
-sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
-sp-runtime  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
+sp-io = "38.0.0"
+sp-core = "34.0.0"
+sp-runtime = "39.0.2"
+sp-keystore = "0.40.0"
 
 [features]
 default = ["std"]
